feat: highlighted button based on dynamic store

--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,5 @@
 :root {
-	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+	font-family: "Red Hat Display";
 	line-height: 1.5;
 	font-weight: 400;
 
@@ -17,6 +17,15 @@
 	--neutral-200: #c5c2c2;
 }
 
+@font-face {
+	font-family: "Red Hat Display";
+	src:
+		url("/fonts/RedHatDisplayVF[wght].woff2")
+			format("woff2 supports variations"),
+		url("/fonts/RedHatDisplayVF[wght].woff2") format("woff2-variations");
+	font-weight: 100 1000;
+}
+
 a {
 	font-weight: 500;
 	color: #646cff;
@@ -29,7 +38,6 @@ a:hover {
 body {
 	margin: 0;
 	display: flex;
-	place-items: center;
 	min-width: 320px;
 	min-height: 100vh;
 }
@@ -48,6 +56,7 @@ h1 {
 	margin: 0 auto;
 	padding: 2rem;
 	text-align: center;
+	width: 100%;
 }
 
 button {
