--- a/src/app.css
+++ b/src/app.css
@@ -40,21 +40,16 @@ body {
 	display: flex;
 	min-width: 320px;
 	min-height: 100vh;
+	justify-content: center;
 }
 
 h1 {
-	font-size: 3.2em;
+	font-size: 2em;
 	line-height: 1.1;
 }
 
-.card {
-	padding: 2em;
-}
-
 #app {
-	max-width: 1280px;
-	margin: 0 auto;
-	padding: 2rem;
+	/* max-width: 1280px; */
 	text-align: center;
 	width: 100%;
 }
