feat: bg and main video in cards

--- a/src/app.css
+++ b/src/app.css
@@ -5,7 +5,7 @@
 
 	color-scheme: light dark;
 	color: rgba(255, 255, 255, 0.87);
-	background-color: #242424;
+	background-color: var(--neutral-900);
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
@@ -49,7 +49,6 @@ h1 {
 }
 
 #app {
-	/* max-width: 1280px; */
 	text-align: center;
 	width: 100%;
 }
@@ -65,23 +64,13 @@ button {
 	cursor: pointer;
 	transition: border-color 0.25s;
 }
-button:hover {
+button:hover:enabled {
 	border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+button:focus:enabled,
+button:focus-visible:enabled {
 	outline: 4px auto -webkit-focus-ring-color;
 }
-
-@media (prefers-color-scheme: light) {
-	:root {
-		color: #213547;
-		background-color: #ffffff;
-	}
-	a:hover {
-		color: #747bff;
-	}
-	button {
-		background-color: #f9f9f9;
-	}
+button:disabled {
+	cursor: not-allowed;
 }
